# ghcjs-benchmark-test

./: LICENSE  Main.hs  README.md  bench.js  bench.nix  default.nix  ghcjs-jsstring-benchmark.cabal
