name:                ghcjs-jsstring-benchmark
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              dmjio
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable bench
  main-is:             Main.hs
  default-language:    Haskell2010
  js-sources:          bench.js
  if !impl(ghcjs)
    buildable: False
  else
    other-extensions:    ScopedTypeVariables
    build-depends:       base, ghcjs-base

